--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 </head>
 <body> 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow-sm py-3 px-4">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3 px-4">
   <div class="container-fluid">
     <a class="navbar-brand fw-bold" href="/">SmartBunks</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
