--- a/static/data/style/style.css
+++ b/static/data/style/style.css
@@ -27,7 +27,13 @@ body {
   box-shadow:0px 0px 15px  #ffffff37;
   background-color: #0b0b0bd6;
 }
-
+.login-container {
+  display: flex;
+  justify-content: center;  /* Horizontal center */
+  align-items: center;      /* Vertical center */
+  min-height: 100vh;        /* Full viewport height */
+  padding: 20px;
+}
 
 .collapsible-dark-card {
   background-color: #0d1117; /* dark card background */
